I can implement the slideshow with recursive search and path input. I'll also look into the failing unit tests.