@@ -72,6 +72,14 @@ android {
             isMinifyEnabled = false
         }
     }
+    testOptions {
+        unitTests.all {
+            it.jvmArgs = listOf(
+                "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED"
+            )
+        }
+    }
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8 // Or JavaVersion.VERSION_17 if preferred
         targetCompatibility = JavaVersion.VERSION_1_8 // Or JavaVersion.VERSION_17
@@ -108,6 +116,8 @@ dependencies {
 
     // Testing libraries
     testImplementation("junit:junit:4.13.2")
+    testImplementation("org.mockito:mockito-core:2.28.2")
+    testImplementation("org.robolectric:robolectric:4.12.1")
     androidTestImplementation("androidx.test.ext:junit:1.1.5")
     androidTestImplementation("androidx.test.espresso:espresso-core:3.5.1")
 }
